--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,9 @@
 .my-row {
-    height: 5vh;
+    height: 4rem;
 }
 
 .block {
-    display: inline-block;
-    height: 100%;
-    width: 5vh;
-    border: 2px solid white;
-
-    text-align: center;
-    padding-top: .5rem;
+    width: 4rem;
 }
 
 .bg-cyan {
